constraints/general-containerresourceratios-samples-container-must-meet-ratio-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerRatios
metadata: # kpt-merge: /container-must-meet-ratio
  name: container-must-meet-ratio
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - config-management-system
      - kube-system
  parameters:
    ratio: "2"
